katars/tests/snapshots/snapshots__error_break_outside_loop.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: break outside of loop
   ╭─[<test>:1:1]
   │
 1 │ break
   │ ──┬──  
   │   ╰──── break outside of loop
───╯
