katars/tests/snapshots/snapshots__error_empty_array.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: empty array literal — cannot infer element type
   ╭─[<test>:1:9]
   │
 1 │ let a = []
   │         ─┬  
   │          ╰── empty array literal — cannot infer element type
───╯
