katars/tests/snapshots/snapshots__error_no_match_arm.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: no match arm matched
   ╭─[<test>:1:1]
   │
 1 │ match 42 { 0 -> "zero" }
   │ ────────────┬───────────  
   │             ╰───────────── no match arm matched
───╯
