katars/tests/snapshots/snapshots__error_try_non_opt.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: ? operator requires an Opt value (enum with Val/Non variants)
   ╭─[<test>:1:9]
   │
 1 │ let x = 42?
   │         ─┬  
   │          ╰── ? operator requires an Opt value (enum with Val/Non variants)
───╯
