katars/tests/snapshots/snapshots__error_undefined_variable.snap
---
source: katars/tests/snapshots.rs
expression: output
---
Error: undefined variable 'y'
   ╭─[<test>:1:9]
   │
 1 │ let x = y
   │         ┬  
   │         ╰── undefined variable 'y'
───╯
